# Coreria

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_GRAPHICS_SETUP.md  README_WEB_UI.md  SHADER_IMPLEMENTATION_PLAN.md  build.bat  build.sh  build_and_run_fixed.bat  build_windowed_games.bat  cargo.bat  cargo_run_equivalent.bat  player_data.json  run_game.bat  run_game.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
advanced-renderer/: Cargo.toml
advanced-renderer/src/: fragment.wgsl  game.rs  lib.rs  main.rs  vertex.wgsl
docs/: README.md
epoch-of-elria/: .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  DREAM_WEAVER_README.md  DreamWeaverCharacters.h  EpochOfElriaEngine.html  GAME_DEMO_OUTPUT.txt  GameEnvironment.cpp  GameEnvironment.h  GameObject.cpp  GameObject.h  GameObject3D.cpp  GameObject3D.h  LEGACY_README.md  Makefile  MemorySystem.h  NarrativeCombat.h  README.md  RPGCharacter.h  RealityManipulation.h  SimpleMemorySystem.h  Start  TheOneAntagonist.h  Vector3D.h  World3D.h  create_windowed_app.cpp  graphics.cpp  graphics.h  linux_windowed_engine.cpp  main.cpp  main_3d_earth_sphere.cpp  main_3d_openworld.cpp  main_dream_weaver_complete.cpp  main_interactive.cpp  main_memory_system.cpp  main_narrative_combat.cpp  main_reality_manipulation.cpp  main_rpg_characters.cpp  main_simple_graphics.cpp  main_simple_memory.cpp  (+13 more)
epoch-of-elria/src/: advanced_rendering.rs  auto_cleanup.rs  game_templates.rs  main.rs  memory_manager.rs  memory_monitor.rs  renderer.rs  world.rs
epoch-of-elria/src/src/: audio.rs  game_framework.rs  game_objects.rs  input.rs  main.rs  math.rs  physics.rs  rendering.rs  scene.rs
output/infinite_world/: index.html  main.js  manifest.webmanifest  sw.js
scripts/: build_and_run.bat
shaders/: bloom.frag  composite.frag  fragment.glsl  outline.frag  spiral.frag  vertex.glsl
src/: advanced_rendering.rs  audio.rs  code_optimizer.rs  environment.rs  feedback_system.rs  game_framework.rs  game_objects.rs  game_state.rs  game_templates.rs  input.rs  lib.rs  main.rs  native_ui.rs  rendering.rs  scene.rs  scripting.rs  ui.rs  web_ui.rs
src/dream_weavers_heart/: GameObject3D.h  Vector3D.h  World3D.h
src/epoch_of_elria/: main_3d_sandbox.cpp
ui/: game_engine_ui.html
