[package]
name = "epoch_of_elria"
version = "0.1.0"
edition = "2021"
authors = ["xingxerx <xingxerx@gmail.com>"]
description = "Epoch of Elria - Self-Improving Sandbox Game Engine"
license = "MIT"



[dependencies]
kiss3d = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
env_logger = "0.10"
anyhow = "1.0"
rodio = { version = "0.17", optional = true }
log = "0.4"
crossterm = "0.27"
nalgebra = "0.32"
lazy_static = "1.4"
ctrlc = "3.4"

[features]
default = []
audio = ["rodio"]


