[workspace]
members = [
    "epoch-of-elria",
    "advanced-renderer"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["xingxerx <xingxerx@gmail.com>"]
license = "MIT"
repository = "https://github.com/xingxerx/Coreria-everything-TM"
homepage = "https://github.com/xingxerx/Coreria-everything-TM"

[workspace.dependencies]
# 3D Graphics and rendering
kiss3d = "0.35"
nalgebra = "0.30"

# Math and utilities
rand = "0.8"
noise = "0.8"
fnv = "1.0"

# Logging and CLI
env_logger = "0.10"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"

# Audio system
rodio = "0.17"

# Physics (collision detection)
ncollide3d = "0.33"

# Web server for debugging UI
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }

# Window management
winit = "0.29"

# Performance optimizations
[profile.dev]
opt-level = 2           # Enable optimizations in debug mode
debug = true           # Keep debug info
overflow-checks = false # Disable overflow checks for speed

[profile.release]
opt-level = 3          # Maximum optimization
lto = true            # Link-time optimization
codegen-units = 1     # Single codegen unit for better optimization
panic = "abort"       # Abort on panic for smaller binary
strip = true          # Strip symbols for smaller binary
