


[workspace.package]
edition = "2021"
version = "0.2.0"
authors = ["Coreria everything TM Team"]
description = "Advanced 3D game engine and renderer for Coreria everything TM"
license = "MIT"
repository = "https://github.com/xingxerx/Coreria"
homepage = "https://github.com/xingxerx/Coreria"

[workspace.dependencies]
wgpu = "0.17"
winit = "0.28"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"
cgmath = "0.18"
env_logger = "0.10"
log = "0.4"
kiss3d = "0.35"
nalgebra = "0.32"
rand = "0.8"
noise = "0.7"
fnv = "1.0"
clap = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rodio = "0.17"
ncollide3d = "0.29"
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
