[package]
name = "coreria-everything-tm-advanced"
version = "0.2.0"
edition = "2021"
authors = ["Coreria everything TM Team"]
description = "Advanced Cel/Neon/Spiral renderer for Coreria everything TM"

[dependencies]
wgpu = "0.17"
winit = "0.28"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"
cgmath = "0.18"
env_logger = "0.10"
log = "0.4"

[[bin]]
name = "advanced"
path = "src/main.rs"
