[package]
name = "advanced_renderer"
version = "0.2.0"
edition.workspace = true
authors = ["Coreria everything TM Team"]
description = "Advanced Cel/Neon/Spiral renderer for Coreria everything TM"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "advanced_renderer"
path = "src/lib.rs"

[dependencies]
wgpu = "0.17"
winit = "0.28"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"
cgmath = "0.18"
env_logger.workspace = true
log.workspace = true