[package]
name = "coreria_everything_tm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Advanced 3D game engine with memory management, real-time graphics, physics simulation, and immersive audio"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/coreria_everything_tm"
keywords = ["game", "engine", "3d", "graphics", "physics"]
categories = ["games", "graphics", "multimedia"]

[dependencies]
# 3D Graphics and rendering
kiss3d.workspace = true
nalgebra.workspace = true

# Math and utilities
rand.workspace = true
noise.workspace = true
fnv.workspace = true

# Logging and CLI
env_logger.workspace = true
log.workspace = true
clap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Audio system
rodio.workspace = true

# Physics (collision detection)
ncollide3d.workspace = true

# Web server for debugging UI
warp.workspace = true
tokio.workspace = true

# Window management
winit.workspace = true
